--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>Dice Game</h1>
     <h2>Rules:</h2>
     <ul>
-        <li>When you click the Roll Dice! button, you will roll up to 10 dice, one at a time. 
+        <li>When you click the Roll Dice! button, you will roll up to 10 dice, one at a time</li> 
         <li>If you roll a 1, game stops and all further rolls are forfeited.</li>
-        <li>If you roll 2, 3, or 4, you win nothing but you get to roll again.</li>
+        <li>If you roll 2 or 3, you win nothing but you get to roll again.</li>
+        <li>If you roll a 4 you lose a coin UNLESS you already have 0 coins.</li>
         <li>If you roll a 5, you win 5 gold coins and you get to roll again.</li>
         <li>If you roll a 6, you win 6 gold coins and you get to roll again.</li>
     </ul>
